eks/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: default
  labels:
    app: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: spring
        image: 276264299222.dkr.ecr.us-east-2.amazonaws.com/kiran-ecr:latest
        ports:
        - containerPort: 8080
