eks/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: springv2  
spec:
  type: LoadBalancer
  selector:
    app: spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
