eks/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: my-app
  annotations:

    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: my-app
              servicePort: 80
